# quesscorp-hrms-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
Schema/: apps.py  models.py
api/: serializers.py  urls.py  views.py
config/: settings.py
utilities/: core.py
